index: /desert/dessert/
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                             <div>
                                 <h1> Medivnyk </h1>
                                 <p>
-                                    A desert originating in Ukraine, the Medivnyk is all about
+                                    A dessert originating in Ukraine, the Medivnyk is all about
                                     honey. Layers of honey-based pastry soaked in cream make the
                                     dish a sweet treat for any occasion. Be prepared though - this
                                     recipe takes hours!
@@ -597,7 +597,7 @@
                                 <p>
                                     A yummy and light treat for after dinner. That wonderful coffee
                                     taste balanced with a sweet vanilla whipped cream may be the
-                                    perfect desert to some.
+                                    perfect dessert to some.
                                 </p>
                             </div>
                         </div>
@@ -625,7 +625,7 @@
                             <div>
                                 <h1> Tiramisu (Pumpkin Spice Latte) </h1>
                                 <p>
-                                    A twist on a classic desert for the Fall, the Pumpkin Spice
+                                    A twist on a classic dessert for the Fall, the Pumpkin Spice
                                     Latte version of my Tiramisu is a crowd-pleaser.
                                     Homemade pumpkin spice mix integrated into the whip cream and
                                     replacing the cocoa powder dusting from the original recipe.
