index: add completion status for initial recipes
Temporary

Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -20,6 +20,34 @@
                 well, and I hope they'll serve y'all well too.
                 Have fun cooking!
             </p>
+            <p>
+                NOTE: This website is currently a WORK IN PROGRESS.
+                I have not finished filling out the initial set of recipes.
+                Initial Recipe Completion status:
+            </p>
+            <input type = 'checkbox' checked disabled> BEG Breakfast Tacos </input>
+            <br>
+            <input type = 'checkbox' checked disabled> Flatbread </input>
+            <br>
+            <input type = 'checkbox' checked disabled> Honey-Glazed Burrito </input>
+            <br>
+            <input type = 'checkbox' disabled> Honey-Glazed Quesadillas </input>
+            <br>
+            <input type = 'checkbox' disabled> Fried Rice </input>
+            <br>
+            <input type = 'checkbox' disabled> Pizza </input>
+            <br>
+            <input type = 'checkbox' disabled> Steak </input>
+            <br>
+            <input type = 'checkbox' disabled> Tortillas </input>
+            <br>
+            <input type = 'checkbox' disabled> Medivnyk </input>
+            <br>
+            <input type = 'checkbox' disabled> Peach Cobbler </input>
+            <br>
+            <input type = 'checkbox' disabled> Tiramisu </input>
+            <br>
+            <input type = 'checkbox' disabled> Pumpkin Spice Tiramisu </input>
         </div>
         <div id = 'recipes'>
             <div class = 'section'>
