index: add initial quesadilla recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <br>
             <input type = 'checkbox' checked disabled> Honey-Glazed Burrito </input>
             <br>
-            <input type = 'checkbox' disabled> Honey-Glazed Quesadillas </input>
+            <input type = 'checkbox' checked disabled> Honey-Glazed Quesadillas </input>
             <br>
             <input type = 'checkbox' disabled> Fried Rice </input>
             <br>
@@ -398,9 +398,10 @@
                                             Flip and fry the other side. Should take no more than
                                             15 seconds.
                                         </li>
+                                    </ol>
                                 </li>
+                                <li> Enjoy! </li>
                             </ol>
-                            <li> Enjoy! </li>
                         </div>
                     </div>
                     <div class = 'recipe'>
@@ -419,17 +420,82 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
-                                <li> TODO </li>
+                                <li> 6oz Frozen Chicken Fajitas </li>
+                                <li> 2 tbsp Avacado Oil </li>
+                                <li> 2x Tortillas (&geq; 9") </li>
+                                <li> 2 cup Shredded Mexican Cheese </li>
+                                <li> 1 tbsp Raw Honey </li>
+                                <li> 1 tsp Sriracha </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
                                 <li>
-                                    TODO
+                                    Heat Up the Chicken
 
                                     <ol type = 'a'>
-                                        <li> TODO </li>
+                                        <li>
+                                            Heat up a small frying pan on low-medium heat
+                                            and grab a lid for it.
+                                        </li>
+                                        <li>
+                                            Once the pan has fully heated, add your oil and allow
+                                            it to start simmering.
+                                        </li>
+                                        <li>
+                                            Place your fajita strips in the oil and cover for 3
+                                            minutes.
+                                        </li>
+                                        <li>
+                                            Flip the fajita strips over, cover, and cook for 2 ½
+                                            minutes.
+                                        </li>
+                                        <li> Remove chicken from pan. </li>
                                     </ol>
                                 </li>
+                                <li>
+                                    Assemble the Quesadillas
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Throw down your sriracha on one half of each tortilla.
+                                        </li>
+                                        <li> Drizzle honey on the other side. </li>
+                                        <li> Cover each tortilla with cheese. </li>
+                                        <li>
+                                            Place the half the chicken on one side each tortilla.
+                                        </li>
+                                        <li>
+                                            Fold each tortilla in half.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Cook the Quesadilla
+
+                                    <ol type = 'a'>
+                                        <li> Heat up a pan on medium low. </li>
+                                        <li> Add the 2 tbspns of avacado oil after 5 min. </li>
+                                        <li>
+                                            Cook the two quesadilla halves for 3 minutes. We don't
+                                            care if it gets crispy yet - just wanna get the cheese
+                                            melting good.
+                                        </li>
+                                        <li>
+                                            Turn up heat to high.
+                                        </l>
+                                        <li>
+                                            Flip and fry the other side. Should only take a minute.
+                                        </li>
+                                        <li>
+                                            Flip back and fry the original side.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Serve. Cut the quesadilla into 6 pieces and serve with a small
+                                    cup of ranch. Drizzle more sriracha on top.
+                                </li>
+                                <li> Enjoy! </li>
                             </ol>
                         </div>
                     </div>
