index: add initial fried-rice recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <br>
             <input type = 'checkbox' checked disabled> Honey-Glazed Quesadillas </input>
             <br>
-            <input type = 'checkbox' disabled> Fried Rice </input>
+            <input type = 'checkbox' checked disabled> Fried Rice </input>
             <br>
             <input type = 'checkbox' disabled> Pizza </input>
             <br>
@@ -514,17 +514,172 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
-                                <li> TODO </li>
+                                <li> 1x Green Bell Pepper </li>
+                                <li> 2x Red Bell Pepper </li>
+                                <li> ½ Sweet Onion </li>
+                                <li> 1 group Green Onion </li>
+                                <li> ¼ cup Jalapeños
+                                <li> 1 cup White Rice </li>
+                                <li> 1.5 cups Water </li>
+                                <li> 1x Rice Cooker </li>
+                                <li> 3 tsp Salt </li>
+                                <li> 3 tbsp Ground Black Pepper (or to smell) </li>
+                                <li> 3 tbsp Garlic Powder (or to smell) </li>
+                                <li> 3 tbsp Chipotle Chili Poweder (or to smell) </li>
+                                <li> 3 tsp Ground Cayenne Pepper </li>
+                                <li>
+                                    3 handfuls of fresh cilantro.
+                                    (Really, for all the seasonings,
+                                    it's just "as much as it takes to smell good")
+                                </li>
+                                <li> 1x can Canned Beef </li>
+                                <li> 2x Egg </li>
+                                <li> 2 tbsp Avacado Oil </li>
+                                <li> 2 tbspn Soy Sauce </li>
+                                <li> 1 tsp Sriracha </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
                                 <li>
-                                    TODO
+                                    Cook the Rice (Day in Advance)
 
                                     <ol type = 'a'>
-                                        <li> TODO </li>
+                                        <li>
+                                            Wash your rice.
+                                            Poor some water in with your cup of rice and stir.
+                                            Rinse and repeat until water is clear after stirring.
+                                            This is too remove starch from the rice.
+                                            It is very important for good rice!
+                                        </li>
+                                        <li>
+                                            Add the 1.5 cups of water to your rice in the rice
+                                            cooker.
+                                        </li>
+                                        <li>
+                                            Start the rice cooker. Stir after rice is cooked.
+                                        </li>
+                                        <li>
+                                            Freeze a day ahead.
+                                        </li>
                                     </ol>
                                 </li>
+                                <li>
+                                    Cook the Veggies
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Start letting the rice unfreeze.
+                                        </li>
+                                        <li>
+                                            Scramble the eggs and season with salt and pepper for
+                                            later.
+                                        </li>
+                                        <li> Dice the veggies. Place in large bowl. </li>
+                                        <li> Heat up a pan to high heat. </li>
+                                        <li>
+                                            Season the veggies with the garlic powder, salt,
+                                            pepper, cayenne pepper, chili powder, and cilantro.
+                                            Don't use it all. You'll be using the seasonings
+                                            throughout the cooking process.
+                                        </li>
+                                        <li>
+                                            Once the pan is heated, pour the oil in and let it
+                                            simmer and shine.
+                                        </li>
+                                        <li>
+                                            Add the veggies and spread them out over the pan.
+                                        </li>
+                                        <li>
+                                            Stir and stir and stir again. Until the onions begin to
+                                            brown
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Cook the Eggs
+
+                                    <ol>
+                                        <li>
+                                            Make room in the pan for eggs, and drain oil into the
+                                            space.
+                                        </li>
+                                        <li>
+                                            Poor scrambled egg into the oil and stir til cooked.
+                                        </li>
+                                        <li>
+                                            Mix in with the veggies.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Cook the Beef
+                                    <ol>
+                                        <li>
+                                            Make room in the pan for the beef, and drain oil into
+                                            the space.
+                                        </li>
+                                        <li>
+                                            Mash apart beef to make a thinnish layer of it.
+                                            Coat in the seasonings.
+                                        </li>
+                                        <li>
+                                            Cook the meat, flipping to get both sides, until
+                                            there is no pink.
+                                        </li>
+                                        <li>
+                                            Mix in with the veggies and eggs.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Cook the Rice
+
+                                    <ol>
+                                        <li>
+                                            Make room in the pan for the rice, and drain oil into
+                                            the space.
+                                        </li>
+                                        <li>
+                                            Put one scoop of rice into the pan and spread into
+                                            a single layer. Yes, only one scoop. Japanese style
+                                            fried rice is mostly veggies and very little rice!
+                                        </li>
+                                        <li>
+                                            Season the rice with the seasonings.
+                                        </li>
+                                        <li>
+                                            Cook the rice for about a minute, then mix in with
+                                            everything else.
+                                        </li>
+                                        <li> Stir til the rice begins to brown. </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Fry
+
+                                    <ol>
+                                        <li>
+                                            Pour a pool of soy sauce into a space in the pan and
+                                            drizzle the rest over the mixture.
+                                        </li>
+                                        <li>
+                                            Stir stir stir until it's all fried.
+                                        </li>
+                                        <li>
+                                            It will now disgustingly smell like Soy Sauce.
+                                            Season the mixture with the seasonings until it smells
+                                            good.
+                                        </li>
+                                        <li>
+                                            Stir some more, let it cook for at least 3 minutes
+                                            total.
+                                        </li>
+                                        <li>
+                                            Move to a bowl. Add sriracha and stir it in.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li> Enjoy! </li>
                             </ol>
                         </div>
                     </div>
