index: rm blurb about TODO. Confusing. Just hide
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -21,33 +21,8 @@
                 Have fun cooking!
             </p>
             <p>
-                NOTE: This website is currently a WORK IN PROGRESS.
-                I have not finished filling out the initial set of recipes.
-                Initial Recipe Completion status:
+                Select one of the collapsible dropdowns below to get started.
             </p>
-            <input type = 'checkbox' checked disabled> BEG Breakfast Tacos </input>
-            <br>
-            <input type = 'checkbox' checked disabled> Flatbread </input>
-            <br>
-            <input type = 'checkbox' checked disabled> Honey-Glazed Burrito </input>
-            <br>
-            <input type = 'checkbox' checked disabled> Honey-Glazed Quesadillas </input>
-            <br>
-            <input type = 'checkbox' checked disabled> Fried Rice </input>
-            <br>
-            <input type = 'checkbox' disabled> Pizza </input>
-            <br>
-            <input type = 'checkbox' disabled> Steak </input>
-            <br>
-            <input type = 'checkbox' disabled> Tortillas </input>
-            <br>
-            <input type = 'checkbox' disabled> Medivnyk </input>
-            <br>
-            <input type = 'checkbox' disabled> Peach Cobbler </input>
-            <br>
-            <input type = 'checkbox' disabled> Tiramisu </input>
-            <br>
-            <input type = 'checkbox' disabled> Pumpkin Spice Tiramisu </input>
         </div>
         <div id = 'recipes'>
             <div class = 'section'>
@@ -683,7 +658,7 @@
                             </ol>
                         </div>
                     </div>
-                    <div class = 'recipe'>
+                    <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/savory/pizza.jpg' />
                             <div>
@@ -712,8 +687,8 @@
                                 </li>
                             </ol>
                         </div>
-                    </div>
-                    <div class = 'recipe'>
+                    </div>-->
+                    <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/savory/steak.jpg' />
                             <div>
@@ -742,8 +717,8 @@
                                 </li>
                             </ol>
                         </div>
-                    </div>
-                    <div class = 'recipe'>
+                    </div>-->
+                    <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/savory/tortilla.jpg' />
                             <div>
@@ -771,18 +746,18 @@
                                 </li>
                             </ol>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
             <div class = 'section'>
                 <img src = './img/food/sweet/tiramisu.jpg' />
                 <button type = 'button' class = 'collapsible'> ▶ Sweet Recipes </button>
                 <div class = 'content'>
-                    <div class = 'recipe'>
+                    <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/medivnyk.jpg' />
                             <div>
-                                <h1> Medivnyk </h1>
+                                <h1> Medovik/Medivnyk </h1>
                                 <p>
                                     A dessert originating in Ukraine, the Medivnyk is all about
                                     honey. Layers of honey-based pastry soaked in cream make the
@@ -808,8 +783,8 @@
                                 </li>
                             </ol>
                         </div>
-                    </div>
-                    <div class = 'recipe'>
+                    </div>-->
+                    <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/peach-cobbler.jpg' />
                             <div>
@@ -837,8 +812,8 @@
                                 </li>
                             </ol>
                         </div>
-                    </div>
-                    <div class = 'recipe'>
+                    </div>-->
+                    <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/tiramisu.jpg' />
                             <div>
@@ -867,8 +842,8 @@
                                 </li>
                             </ol>
                         </div>
-                    </div>
-                    <div class = 'recipe'>
+                    </div>-->
+                    <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/pumpkin-spice-tiramisu.jpg' />
                             <div>
@@ -898,7 +873,7 @@
                                 </li>
                             </ol>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
