Add peach-cobbler recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
                             </ol>
                         </div>
                     </div>-->
-                    <!--<div class = 'recipe'>
+                    <div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/peach-cobbler.jpg' />
                             <div>
@@ -799,20 +799,110 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
-                                <li> TODO </li>
+                                <li> 8 fresh peaches </li>
+                                <li> 1½ cups + 3 tbsps Pure White Cane Sugar </li>
+                                <li> 1½ cups Brown Sugar </li>
+                                <li> 1½ tspns Ground Cinnamon </li>
+                                <li> ½ tspn Ground Nutmeg </li>
+                                <li> 1 tspn Fresh Lemon Juice </li>
+                                <li> 2 tspns Cornstarch </li>
+                                <li> 2 cups All-Purpose Flour </li>
+                                <li> 1 tspn Baking Powder </li>
+                                <li> ½ tspn Salt </li>
+                                <li> 6 tbsps Room-temp Salted Butter </li>
+                                <li> ½ cup Boiling Water </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
                                 <li>
-                                    TODO
+                                    Prep Peaches
 
                                     <ol type = 'a'>
-                                        <li> TODO </li>
+                                        <li> Preheat oven to 425⁰F. </li>
+                                        <li>
+                                            Use a peeler to peel a peach. In my experience,
+                                            other methods are just not as effective.
+                                        </li>
+                                        <li>
+                                            Cut to the pit all the way around the center of the
+                                            peach.
+                                        </li>
+                                        <li>
+                                            Grab top and bottom halves and twist to separate the
+                                            peach.
+                                        </li>
+                                        <li>
+                                            Pull the pit out of the side it sticks to.
+                                        </li>
+                                        <li>
+                                            Cut each half in half and then into wedges.
+                                        </li>
+                                        <li> Repeat for all 8 peaches. </li>
                                     </ol>
                                 </li>
+                                <li>
+                                    Sweeten Peaches
+
+                                    <ol>
+                                        <li>
+                                            Combine peaches, ½ cup brown sugar, ½ cup sugar, ½ tspn
+                                            cinnamon, ½ tspn nutmeg, lemon juice, and cornstarch in
+                                            a large (I mean it - LARGE! It's a lot of peaches)
+                                        </li>
+                                        <li>
+                                            Hand mix the spices and such all over the peaches, then
+                                            shake to ensure event coating.
+                                        </li>
+                                        <li>
+                                            Pour and even out into a baking dish (4 quart).
+                                        </li>
+                                        <li>
+                                            Bake in the oven for 10 minutes.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Create Crust (During Initial Bake)
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Combine flour, 1 cup sugar, 1 cup brown sugar,
+                                            baking powder, and salt in a large bowl.
+                                        </li>
+                                        <li>
+                                            Add butter in with hands.
+                                        </li>
+                                        <li>
+                                            Stir in the boiling water until combined. You
+                                            want just barely combined.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Assemble the Cobbler
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Drop spoonfuls of the crust to cover the peaches.
+                                            It will expand a bit, but you should try to cover
+                                            as much as possible.
+                                        </li>
+                                        <li>
+                                            Mix the last 3 tbsps of sugar and 1 tspn of cinnamon
+                                            together and sprinkle over the top.
+                                        </li>
+                                        <li>
+                                            Bake for 30 minutes until golden brown.
+                                        </li>
+                                        <li>
+                                            Serve with a scoop of Bluebell Homemade Vanilla.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li> Enjoy! </li>
                             </ol>
                         </div>
-                    </div>-->
+                    </div>
                     <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/tiramisu.jpg' />
