--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
                             </ol>
                         </div>
                     </div>
-                    <!--<div class = 'recipe'>
+                    <div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/tiramisu.jpg' />
                             <div>
@@ -919,20 +919,90 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
-                                <li> TODO </li>
+                                <li>
+                                    180g Espresso (will not explain how to make good espresso here
+                                    as that could be its own website!).
+                                    I do 3x 60g shots at a 1:2 ratio (30g in; I have a massive cup)
+                                    and not the best shots (doesn't need to be).
+                                </li>
+                                <li> 70g Pure Cane Sugar </li>
+                                <li> 5g/1 tspn Vanilla </li>
+                                <li>
+                                    360g Heavy Whipping Cream (A lil under a 16oz carton ~1.75 c)
+                                </li>
+                                <li> 230g Mascarpone Cheese (1x 8oz container) </li>
+                                <li>
+                                    One pack of Bonomi Savoiardi Lady Fingers.
+                                    You can use other brands, just make sure to get enough to cover
+                                    an 8"x8" dish two times (two layers).
+                                </li>
+                                <li>
+                                    2 tbsps Dutch Chocolate High Cacao Cocoa Powder (not the
+                                    crummy Hershey stuff)
+                                </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
                                 <li>
-                                    TODO
+                                    Prep
 
                                     <ol type = 'a'>
-                                        <li> TODO </li>
+                                        <li> Chill the heavy whipping cream. </li>
+                                        <li> Let the mascarpone reach room temperature. </li>
+                                        <li> Extract the espresso </li>
                                     </ol>
                                 </li>
+                                <li>
+                                    Make Cream Filling
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Put the sugar, vanilla, and heavy whipping cream in a
+                                            bowl, and whisk til the sugar isn't sticking to the
+                                            bowl.
+                                        </li>
+                                        <li>
+                                            Whisk for ~2-8 min to whip up a thick cream.
+                                        </li>
+                                        <li>
+                                            Fold in the mascarpone with a rubber spatula until
+                                            homogenous.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Make Layer 1
+
+                                    <ol type = 'a'>
+                                        <li> Pour the coffee into a shallow bowl or a plate. </li>
+                                        <li>
+                                            One by one, dip the lady fingers on either side into
+                                            the coffee and lay them along the bottom of your dish.
+                                            Do NOT soak!!! Lightly dip either side lest you have a
+                                            pool of espresso by the end not a tiramisu.
+                                        </li>
+                                        <li>
+                                            Put half the whipped cream on top and smooth it out.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Make Layer 2
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Repeat making a layer: dip and arrange the fingers
+                                            (now on top of the previous) and top with whipped cream
+                                        </li>
+                                        <li>
+                                            Dust with Cocoa Powder
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li> Enjoy! </li>
                             </ol>
                         </div>
-                    </div>-->
+                    </div>
                     <!--<div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/pumpkin-spice-tiramisu.jpg' />
