Added pumpkin spice tiramisu
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
                             </ol>
                         </div>
                     </div>
-                    <!--<div class = 'recipe'>
+                    <div class = 'recipe'>
                         <div class = 'recipehdr'>
                             <img src = './img/food/sweet/pumpkin-spice-tiramisu.jpg' />
                             <div>
@@ -1020,20 +1020,105 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
-                                <li> TODO </li>
+                                <li>
+                                    180g Espresso (will not explain how to make good espresso here
+                                    as that could be its own website!).
+                                    I do 3x 60g shots at a 1:2 ratio (30g in; I have a massive cup)
+                                    and not the best shots (doesn't need to be).
+                                </li>
+                                <li> 70g Pure Cane Sugar </li>
+                                <li> 5g/1 tspn Vanilla </li>
+                                <li>
+                                    360g Heavy Whipping Cream (A lil under a 16oz carton ~1.75 c)
+                                </li>
+                                <li> 230g Mascarpone Cheese (1x 8oz container) </li>
+                                <li>
+                                    One pack of Bonomi Savoiardi Lady Fingers.
+                                    You can use other brands, just make sure to get enough to cover
+                                    an 8"x8" dish two times (two layers).
+                                </li>
+                                <li> 1 tbsp Ground Cinnamon </li>
+                                <li> ½ tbsp Ground Nutmeg </li>
+                                <li> ½ tbsp Ground Ginger </li>
+                                <li> ⅓ tbsp Ground Cloves </li>
+                                <li> ⅓ tbsp Ground All-Spice </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
                                 <li>
-                                    TODO
+                                    Prep
 
                                     <ol type = 'a'>
-                                        <li> TODO </li>
+                                        <li> Chill the heavy whipping cream. </li>
+                                        <li> Let the mascarpone reach room temperature. </li>
+                                        <li> Extract the espresso. </li>
+                                        <li>
+                                            Mix the pumpkin spice (cinnamon, nutmeg, ginger,
+                                            cloves, all-spice). Place in a seal container and
+                                            shake well.
+                                        </li>
                                     </ol>
                                 </li>
+                                <li>
+                                    Make Cream Filling
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Put the sugar, vanilla, and heavy whipping cream in a
+                                            bowl, and whisk til the sugar isn't sticking to the
+                                            bowl.
+                                        </li>
+                                        <li>
+                                            Mix in 1 tbsp of pumpkin spice. Stir til mixed.
+                                        </li>
+                                        <li>
+                                            Mix in another 1 tbsp of pumpkin spice and mix.
+                                            Continue to taste. This is enough for me.
+                                        </li>
+                                        <li>
+                                            Whisk for ~2-8 min to whip up a thick cream.
+                                        </li>
+                                        <li>
+                                            Fold in the mascarpone with a rubber spatula until
+                                            homogenous.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Make Layer 1
+
+                                    <ol type = 'a'>
+                                        <li> Pour the coffee into a shallow bowl or a plate. </li>
+                                        <li>
+                                            One by one, dip the lady fingers on either side into
+                                            the coffee and lay them along the bottom of your dish.
+                                            Do NOT soak!!! Lightly dip either side lest you have a
+                                            pool of espresso by the end not a tiramisu.
+                                        </li>
+                                        <li>
+                                            Put half the whipped cream on top and smooth it out.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Make Layer 2
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Repeat making a layer: dip and arrange the fingers
+                                            (now on top of the previous) and top with whipped cream
+                                        </li>
+                                        <li>
+                                            Dust with more Pumpkin Spice. Make sure to really
+                                            do a thin layer as it is a very strong flavor!
+                                            I recommend blowing it from your hand over the
+                                            dish, even though it makes a mess.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li> Enjoy! </li>
                             </ol>
                         </div>
-                    </div>-->
                 </div>
             </div>
         </div>
